--- a/main.html
+++ b/main.html
@@ -20,33 +20,32 @@
     .col {
       border: 2px dotted rgb(38, 38, 43);
     }
-    /* Row-specific colors */
-    .row1-col1 { background-color: teal; }
-    .row1-col2 { background-color: thistle; }
-    .row2-col1 { background-color: tomato; }
-    .row2-col2 { background-color: turquoise; }
-    .row3-col1 { background-color: violet; }
-    .row3-col2 { background-color: yellowgreen; }
+    .r1c1 { background-color: teal; }
+    .r1c2 { background-color: thistle; }
+    .r2c1 { background-color: tomato; }
+    .r2c2 { background-color: turquoise; }
+    .r3c1 { background-color: violet; }
+    .r3c2 { background-color: yellowgreen; }
   </style>
 </head>
 <body>
   <div class="container">
     <!-- Row 1 -->
     <div class="row">
-      <div class="col-md-4 col-sm-6 col row1-col1">Row1 col1</div>
-      <div class="col-md-8 col-sm-6 col row1-col2">Row1 col2</div>
+      <div class="col-md-4 col-sm-6 col r1c1">Row1 col1</div>
+      <div class="col-md-8 col-sm-6 col r1c2">Row1 col2</div>
     </div>
 
     <!-- Row 2 -->
-    <div class="row">
-      <div class="col-md-4 offset-md-2 col-sm-6 col row2-col1">Row2 col1</div>
-      <div class="col-md-4 offset-md-2 col-sm-6 col row2-col2">Row2 col2</div>
+    <div class="row justify-content-between">
+      <div class="col-md-4 offset-md-2 col-sm-6 col r2c1">Row2 col1</div>
+      <div class="col-md-4 col-sm-6 col r2c2">Row2 col2</div>
     </div>
 
     <!-- Row 3 -->
     <div class="row justify-content-center">
-      <div class="col-md-4 col-sm-6 col row3-col1">Row3 col1</div>
-      <div class="col-md-4 col-sm-6 col row3-col2">Row3 col2</div>
+      <div class="col-md-4 col-sm-6 col r3c1">Row3 col1</div>
+      <div class="col-md-4 col-sm-6 col r3c2">Row3 col2</div>
     </div>
   </div>
 
